fix modal default spacing

--- a/src/game.css
+++ b/src/game.css
@@ -8,6 +8,7 @@
 
 .footer {
     display: flex;
+    align-items: center;
 }
 
 .label {
@@ -67,7 +68,6 @@
     margin-left: 10px;
     width: 100px;
     height: 25px;
-
 }
 
 .stop-off {
@@ -129,7 +129,10 @@
     color: black;
     font-weight: 600;
     margin-left: 10px;
+    margin-right: 50px;
     white-space: nowrap;
+    text-overflow: hidden;
+    width: 100px;
 }
 
 .instructions {
@@ -137,10 +140,10 @@
     color: lightblue;
     background-color: black;
     border-radius: 4px;
-    margin-left: 50px;
     width: 150px;
     height: 25px;
     white-space: nowrap;
+    font-size: 14px;
 }
 
 .modal {
@@ -158,7 +161,7 @@
 .content {
     background-color: black;
     color: lightblue;
-    margin: 15% auto; 
+    margin: 5.5% auto; 
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
